gcc/testsuite/g++.dg/cpp0x/variadic40.C
// { dg-do compile { target c++11 } }
template<typename... Values, typename T>
struct backward_tuple {}; // { dg-error "end" }
